# real-time-chat-application

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: .env.development  .env.production  Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt  wait-for-it.sh
api/apps/authentication/: models.py
api/apps/authentication/data/repositories/: user_repository_impl.py
api/apps/authentication/data/services/: authentication_service_impl.py  user_service_impl.py
api/apps/authentication/domain/entities/: user_entity.py
api/apps/authentication/domain/repositories/: user_repository.py
api/apps/authentication/domain/services/: authentication_service.py  user_service.py
api/apps/authentication/migrations/: 0001_initial.py
api/apps/authentication/presentation/: auth_view.py  serializers.py  urls.py
api/apps/authentication/tests/: test_authentication.py
api/apps/chat/: models.py
api/apps/chat/data/repositories/: message_repository_impl.py  room_repository_impl.py
api/apps/chat/data/services/: message_service_impl.py  room_service_impl.py
api/apps/chat/domain/entities/: message_entity.py  room_entity.py
api/apps/chat/domain/repositories/: message_repository.py  room_repository.py
api/apps/chat/migrations/: 0001_initial.py
api/apps/chat/presentation/: routing.py  urls.py
api/apps/core/: base_model.py  base_repository.py  base_service.py
api/apps/shared/: dependencies.py
api/config/: asgi.py  urls.py
api/config/middleware/: exception_handler.py
api/config/settings/: base.py  development.py
api/ssl/: cert.pem  key.pem
(+37 files in other folders)
